-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.0
-
None
-
777ae87779 (qt-creator/qt-creator/8.0) 777ae87779 (qt-creator/qt-creator/master) 777ae87779 (qt-creator/qt-creator/qds-3.6) 777ae87779 (qt-creator/qt-creator/9.0)
Users who really don't want to create AVDs in Android Studio or via command line can open the "Preferences -> Devices" and use "Add... Android Device" to create a new AVD.
After that, the device list gets updated and the details of the created AVD is shown. However, the data is incomplete. Also actions like Start and Erase AVD don't work.
The reason is that details of AVD devices are usually fetched via AndroidDeviceManager::updateAvdsList(), which does not happen in this dialog.
Also , our"adb track-devices" does not get notified by the addition of an AVD (which I would have preferred).
After a restart of Qt Creator, the AVD is properly listed and also usable.
| For Gerrit Dashboard: QTCREATORBUG-27804 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 420533,3 | Android: Update devices list after creating an AVD | 8.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |