Android: Update devices list after creating an AVD

Ensure that a freshly created AVD is properly listed and is usable. By
forcing a AndroidDeviceManager::updateAvdsList() after successful
creation.

Fixes: QTCREATORBUG-27804
Change-Id: I1ef0fb23d2c13b99d285f07505189f37929f4ed7
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>